# acctreconagent

./: .env.sample  .gitignore  README.md  app.py  main.py  package-lock.json  pyproject.toml
.codex/sessions/2025/10/30/: rollout-2025-10-30T14-47-02-019a3671-daf5-74e2-bd58-71d9715e171c.jsonl
.streamlit/: config.toml
data/demo/: README.md  detailed_transactions.csv  gl_balances.csv  gl_detail.csv  subledger_balances.csv  subledger_detail.csv  transactions.csv
docs/: openai_agents.md
notebooks/: openai_agents_demo.ipynb
src/recon_agent/: __init__.py  agent.py  datasources.py  insights.py  llm.py  models.py  openai_agent.py  output.py  reconciliation.py  rollforward.py
xero/: AP Activity.xlsx  AP Aging 2020-11.csv  AP Aging 2020-12.csv  AR Activity 2020-12.xlsx  AR Aging 2020-11.csv  AR Aging 2020-12.xlsx  B&R Summary 2020-11.csv  B&R Summary 2020-12.csv  BR Journal 2020-11-12.csv  BS 2020-11.xlsx  BS 2020-12.xlsx  Billing and Revenue Details - Billing - 2020-11.csv  Billing and Revenue Details - Billing - 2020-12.csv  Billing and Revenue Details - Revenue - 2020-11.csv  Billing and Revenue Details - Revenue - 2020-12.csv  CI Journal 2020-11-12.csv  Cost Summary by Cost Elemets 2020-12.csv  GL Detail 2020-11.csv  GL Detail 2020-12.csv  IS 2020-11.xlsx  IS 2020-12.xlsx  TB 2020-11.xlsx  TB 2020-12.xlsx
